# GoIT_H6_databases

./: .gitignore  README.md  pyproject.toml
GoIT_web_H6_databases/: pyproject.toml
goit_web_h6_databases/: create_db.py  execute_queries.py  fill_db_fake_data.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.sql
