[tool.poetry]
name = "goit-web-h6-databases"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
